# ChangeLog for dev-lang/mono
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.187 2010/02/20 11:05:20 patrick Exp $

*mono-2.4.3.1 (20 Feb 2010)

  20 Feb 2010; Patrick Lauer <patrick@gentoo.org> +mono-2.4.3.1.ebuild:
  Bump for #296373

*mono-2.6.1 (20 Feb 2010)

  20 Feb 2010; Patrick Lauer <patrick@gentoo.org> +mono-2.6.1.ebuild:
  Bump for #296373

  11 Feb 2010; Ulrich Mueller <ulm@gentoo.org> mono-1.2.5.1-r1.ebuild,
  mono-1.2.6-r3.ebuild, mono-2.0.1-r1.ebuild:
  Replace license X11 by MIT, bug 298556.

*mono-2.4.3 (06 Feb 2010)

  06 Feb 2010; Arun Raghavan <ford_prefect@gentoo.org> +mono-2.4.3.ebuild:
  Bump to 2.4.3. Pretty much a bugfix release.

  31 Jan 2010; Torsten Veller <tove@gentoo.org> mono-1.2.5.1-r1.ebuild,
  mono-1.2.6-r3.ebuild, mono-2.0.1-r1.ebuild, mono-2.0.9999.ebuild,
  mono-2.4.2.3.ebuild, mono-2.4.9999.ebuild, mono-9999.ebuild:
  Change vecho to echo

  27 Sep 2009; nixnut <nixnut@gentoo.org> mono-2.4.2.3.ebuild:
  ppc stable #284306

  19 Sep 2009; Markus Meier <maekke@gentoo.org> mono-2.4.2.3.ebuild:
  amd64/x86 stable, bug #284306

  02 Sep 2009; Peter Alfredsen <loki_val@gentoo.org> -mono-2.2-r5.ebuild,
  -mono-2.2.9999.ebuild, -mono-2.4.2.ebuild:
  Drop old

*mono-2.4.2.3 (23 Aug 2009)

  23 Aug 2009; Peter Alfredsen <loki_val@gentoo.org> -mono-2.4.ebuild,
  -mono-2.4-r3.ebuild, +mono-2.4.2.3.ebuild:
  Bump to 2.4.2.3, remove 2.4, 2.4-r3. Fixes bug 282012. Contains fix for
  277878.

*mono-2.4.2 (30 Jun 2009)

  30 Jun 2009; Peter Alfredsen <loki_val@gentoo.org> -mono-2.4.2_rc1.ebuild,
  +mono-2.4.2.ebuild:
  Bump to 2.4.2

*mono-2.4.2_rc1 (22 Jun 2009)

  22 Jun 2009; Peter Alfredsen <loki_val@gentoo.org>
  -mono-2.4.2_pre2.ebuild, +mono-2.4.2_rc1.ebuild:
  Bump

*mono-2.4.2_pre2 (17 Jun 2009)

  17 Jun 2009; Peter Alfredsen <loki_val@gentoo.org>
  -mono-2.4.2_pre1.ebuild, +mono-2.4.2_pre2.ebuild:
  Bump

*mono-2.4.2_pre1 (09 Jun 2009)
