@@ -10,9 +10,11 @@ AUX mono-biginteger_overflow.diff 848 RMD160 1f2cb38e577102943399459e2ef0f511dca
 DIST mono-2.0.1.tar.bz2 19385815 RMD160 ecada26dc398f0ea4cc4cae62885f4d1438bd540 SHA1 1c06d614b9b83ca0c8cff98d06136fd5a17344e2 SHA256 7089e8591ce793940d8a30f3ff5414437c32fc346fa918ec7f186516dab3e212
 DIST mono-2.4.2.3.tar.bz2 24815426 RMD160 f52bf6e281b076b859a567c17917577710522684 SHA1 c0e7c2992ef6c1ea3d1fd48ef581aa1ff6ec29cb SHA256 1bab0d4e2906c88736ff5e242f2905f4c3535ccfc05bb5c427b72adf0e9236ae
 DIST mono-2.6.1.tar.bz2 27644697 RMD160 9d1b5f1f465f285edac98e6b1122965f9e56e0fa SHA1 1e28a40e9e3da194ef96011d804cbcc839b85e08 SHA256 6bd6cc59b740bb3a971a6315f3a85fdfdf5cf1e94545e915ba96c3ea7224baa3
+DIST mono-2.6.3.tar.bz2 27761467 RMD160 e3d61f618a0e9f063d6eb86e336f5deaa23cbcc8 SHA1 a4aab7f46983664dc4cf63a01e4fe7a8a49de2c6 SHA256 0ecb82d2007f472f8eebc85c349813515bf642e6ea021890ece40555ad50d947
 EBUILD mono-2.0.1-r1.ebuild 3358 RMD160 d70976e419d30904ab0457e34813265b31a9ca77 SHA1 e25bd392cb9d9e9749317aa5f03f3d8c123ec431 SHA256 fd6e90598912ac395b39a276e5eb59c7ace9e2f4ce6f413b044e4b36476584c3
 EBUILD mono-2.4.2.3.ebuild 7197 RMD160 2558b26921b6f2cc098f259a8ff00d44d62267ea SHA1 c8c59515ac5475402e83e7bbc21c62bd3d524c97 SHA256 5dfaef591e0ddab80bc447cba31f87925725562d9ef53008ae552f407c03563a
 EBUILD mono-2.4.9999.ebuild 7525 RMD160 4efe2c6a9e15036e893301e2817085ea4395a984 SHA1 59911902662abf247bc4ab0076a94c67e4c2120f SHA256 a3c63dcef1f8e50763b9c24a2801106215aae04722f7491a5d7a39c0b42f043c
 EBUILD mono-2.6.1.ebuild 7149 RMD160 d60908f746f21e743aa021273ec5b50b7a65a09b SHA1 5018266be4d4e0813e866162b4a38dfe8e8ece64 SHA256 0897e7e98d061e06d86448820c14ef65d5e525d0d117cc1dbb81bde6cbaae6e7
-MISC ChangeLog 39768 RMD160 8c6bf9a746bedc5b4062b8005f4759dca48eb947 SHA1 680cff43848520b9923a7787eebf66371c9b4b80 SHA256 fecc67640755b4f8018a5e00611bd4ce2ac36dfd16d3d5befd45f614747aa609
+EBUILD mono-2.6.3.ebuild 7149 RMD160 6ae3de5d0e21412119c9977de2450208dd54956e SHA1 501622206f1c339bac35e3f54b9b6dccad8aa054 SHA256 109287df024063ba82e415012512bf26b90bc6e400e443d6b28fcf8cc8e43746
+MISC ChangeLog 39873 RMD160 34422880186174e581dfb68f1e66637215990508 SHA1 2014947c183e8df89dd8ce04c6ab8088275ac043 SHA256 00460e9fb0dad503f3fc12cd49f32f4bb7e1ff7635ef8f54dfa878c1a2a9156b
 MISC metadata.xml 372 RMD160 163faef818f92e85913da4add580c9b534fcc1f4 SHA1 af2ccd5f8de56a233139452e6c7ec9cf3c4a749e SHA256 05441e51cf289ea8e4039500f8b4cece85ead51bb46f8ea9588bd6d831239315
